# goorm_socket/api/login.go
@@ -15,7 +15,17 @@ import (
 )
 
 //curl -d '{"id":"soomin@genielove.com", "password":"passsword"}' -X POST localhost:8000/api/v1/login
-// Welcom godoc
+// CollectHost godoc
+// @Summary Host information collection.
+// @Description If it already exists, the changeable information is updated, and in the case of a new host, it is created and returned.
+// @Accept json
+// @Produce json
+// @Param user body RequestData true "User ID and password"
+// @Success 200 {object} models.User
+// @Failure 400 {object} models.User
+// @Failure 404 {object} models.User
+// @Failure 500 {object} models.User
+// @Router /login [post]
 func Login(c *gin.Context) { //로그인 함수
 	body := c.Request.Body
 	value, err := ioutil.ReadAll(body)
@@ -23,6 +33,7 @@ func Login(c *gin.Context) { //로그인 함수
 
 	var data map[string]interface{}
 	json.Unmarshal(value, &data)
+	fmt.Println("😊", data)
 	/*data = {
 		"id": "tnals5152@gmail.com",
 		"password": "password",
@@ -41,8 +52,12 @@ func Login(c *gin.Context) { //로그인 함수
 	// DB에서 일치하는 유저 검색
 	// config.GetDB.Model(user).Where(user).Count(&userCount)
 
+	// config.GetDB.Model(user).Where(user).Update("password", string(password[:]))
+	// user.Password = string(password[:])
+	// config.SetDB.Save(user)
 	//result.RowsAffected - result개수
 	result := config.GetDB.Model(user).Where(user).Find(&users)
+	fmt.Println("😀", users)
 
 	if result.RowsAffected == 1 { //일치하는 유저 있음 1개 -> 로그인 성공
 		c.JSON(http.StatusOK, gin.H{
